# databricks-sql-nodejs

./: .eslintrc  .gitattributes  .gitignore  .npmignore  .prettierignore  CHANGELOG.md  CODEOWNERS  CONNECTION_PARAMETERS.md  CONTRIBUTING.md  KERNEL_REV  LICENSE  NOTICE  README.md  SECURITY-OVERRIDES.md  benchmarkNode.js  generated_task_specs.json  nyc.config.js  osv-scanner.toml  package-lock.json  package.json  repl  tsconfig.build.json  tsconfig.json
.claude/commands/: MST_Design.md
.github/: CODEOWNERS
.github/workflows/: dco-check.yml  kernel-e2e.yml  kernel-rc-cross-os.yml  main.yml  release.yml  securityScan.yml  trigger-integration-tests.yml
benchmarking/: large_results_0005mb.sql  large_results_0010mb.sql  large_results_0025mb.sql  large_results_0050mb.sql  large_results_0100mb.sql  large_results_0250mb.sql  large_results_0500mb.sql  large_results_1025mb.sql  large_results_2050mb.sql  large_results_4100mb.sql  large_results_8200mb.sql  low_latency_count_star.sql  low_latency_limit_0.sql  low_latency_select_1.sql  low_latency_set_show_all.sql  low_latency_set_show_ansi_mode.sql  low_latency_tpch_sf1_q01.sql  low_latency_tpch_sf1_q04.sql  low_latency_tpch_sf1_q06.sql  low_latency_tpch_sf1_q12.sql  low_latency_tpch_sf1_q13.sql  low_latency_tpch_sf1_q14.sql  low_latency_tpch_sf1_q19.sql
ci/kernel-rc-bugbash/: README.md  package-lock.json  package.json
coverage/: coverage-summary.json  lcov.info
coverage/lcov-report/: index.html
docs/: TELEMETRY.md  readme.md  troubleshooting.md
examples/: cancel_operation.js  data_types.js  logging.js  query_tags.js  repl  session.js  session_params.js  usage.js
examples/connections/: config.js
examples/tokenFederation/: README.md  customTokenProvider.d.ts  customTokenProvider.js  customTokenProvider.js.map  customTokenProvider.ts  externalToken.d.ts  externalToken.js  externalToken.js.map  externalToken.ts  federation.d.ts  federation.js  federation.js.map  federation.ts  m2mFederation.d.ts  m2mFederation.js  m2mFederation.js.map  m2mFederation.ts  staticToken.d.ts  staticToken.js  staticToken.js.map  staticToken.ts
lib/: DBSQLClient.ts  DBSQLLogger.ts  DBSQLOperation.ts  DBSQLParameter.ts  DBSQLSession.ts  HiveClient.ts  HiveOperation.ts  HiveSession.ts  globalConfig.ts  index.ts  polyfills.ts  utils.ts  version.ts
lib/DBSQLOperation/: CompleteOperationHelper.ts  DataFetchingHelper.ts  FetchResultsHelper.ts  OperationStatusHelper.ts  SchemaFetchingHelper.ts  SchemaHelper.ts  checkIfOperationHasMoreRows.ts  getResult.ts  index.ts  waitUntilReady.ts
lib/contracts/: IBackend.ts  IClientContext.ts  IDBSQLClient.ts  IDBSQLLogger.ts  IDBSQLSession.ts  IDriver.ts  IHiveClient.ts  IHiveSession.ts  IOperation.ts  IOperationBackend.ts  ISessionBackend.ts  IThriftClient.ts  InternalConnectionOptions.ts  OperationStatus.ts  ResultMetadata.ts
lib/dto/: InfoValue.ts  Status.ts
lib/errors/: AuthenticationError.ts  ClientError.ts  DBSQLClientError.ts  DBSQLError.ts  DBSQLOperationError.ts  DriverError.ts  HiveDriverError.ts  OperationError.ts  OperationStateError.ts  ParameterError.ts  RetryError.ts  StagingError.ts  StatusError.ts  TransportError.ts
lib/factory/: StatusFactory.ts
lib/hive/: HiveDriver.ts
lib/kernel/: KernelArrowImport.ts  KernelArrowIpc.ts  KernelArrowIpcDurationFix.ts  KernelAuth.ts  KernelBackend.ts  KernelErrorMapping.ts  KernelInputValidation.ts  KernelLogging.ts  KernelNativeLoader.ts  KernelNoMaterializationConverter.ts  KernelOperationBackend.ts  KernelOperationLifecycle.ts  KernelPositionalParams.ts  KernelResultsProvider.ts  KernelServerInfo.ts  KernelSessionBackend.ts
lib/rest/: RestClient.ts  RestDriver.ts  Types.ts
lib/result/: ArrowResult.ts  ArrowResultConverter.ts  ArrowResultHandler.ts  CloudFetchResult.ts  CloudFetchResultHandler.ts  IOperationResult.ts  IResultsProvider.ts  JsonResult.ts  JsonResultHandler.ts  NullResult.ts  ResultSlicer.ts  RowSetProvider.ts  utils.ts
lib/sea/: SeaArrowIpc.ts  SeaArrowIpcDurationFix.ts  SeaAuth.ts  (+12 more)
native/sea/: .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json
native/sea/src/: connection.rs  database.rs  error.rs  lib.rs  logger.rs  result.rs  runtime.rs  statement.rs  util.rs
patches/: thrift+0.16.0.patch
spec/: telemetry-design.md  telemetry-sprint-plan.md  telemetry-test-completion-summary.md
thrift/: TCLIService.d.ts  TCLIService.js  TCLIService_types.d.ts  TCLIService_types.js
(+505 files in other folders)
