# Copyright (c) 2026 Databricks, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "databricks-sea-native"
version = "0.1.0"
edition = "2021"
authors = ["Databricks"]
license = "Apache-2.0"
description = "Databricks SQL Node.js SEA native binding (napi-rs)"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs v2 line; `napi6` enables N-API 6 surface, `async` enables the
# `#[napi] async fn` glue that drives futures on napi-rs's tokio runtime.
napi = { version = "2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2"

# Kernel — path dep on the async-public-api branch worktree. Once the
# kernel is published this becomes a version dep.
databricks-sql-kernel = { path = "../../../../databricks-sql-kernel-sea-WT/async-public-api" }

# Tokio is a transitive dep via the kernel and via napi's `async` feature;
# declared explicitly so we can name `tokio::runtime::Handle` directly.
tokio = { version = "1", default-features = false, features = ["rt"] }

# Lazy `OnceCell` for the captured tokio Handle.
once_cell = "1"

# Tracing for kernel + binding diagnostics. The real subscriber is wired
# in Round 3 via the ThreadsafeFunction logger bridge.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
